Use `JsonNode`s to cut down on `record`s and helper functions